implemented Open API spec and refractored code
