# src/main/resources/static/openapi.yml
@@ -5,6 +5,7 @@ info:
   description: API documentation for user management.
 servers:
   - url: http://localhost:8085
+    description: User Management API
 paths:
   /api/users:
     get:
@@ -43,7 +44,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserDto'
-
+        "400":
+          description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/users/{id}:
     get:
       summary: Get user by ID
@@ -120,6 +126,11 @@ components:
   schemas:
     UserDto:
       type: object
+      required:
+        - username
+        - email
+        - password
+        - streetAddress
       properties:
         id:
           type: string
@@ -127,6 +138,8 @@ components:
         username:
           type: string
           example: "alice123"
+          minLength: 4
+          maxLength: 6
         firstname:
           type: string
           example: "Alice"
@@ -135,6 +148,8 @@ components:
           example: "Johnson"
         email:
           type: string
+          format: email
+          pattern: '^[\w\.-]+@[a-zA-Z\d\.-]+\.[a-zA-Z]{2,}$'
           example: "alice.johnson@example.com"
         mobileNumber:
           type: string
@@ -142,3 +157,39 @@ components:
         streetAddress:
           type: string
           example: "456 Oak Street"
+        migrated:
+          type: boolean
+          default: false
+        age:
+          type: integer
+          minimum: 18
+          maximum: 40
+        password:
+          type: string
+          minLength: 6
+          description: The user's password, must be at least 8 characters long.
+          pattern: '^(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
+          example: Shubham@123
+    ValidationError:
+      type: object
+      properties:
+        field:
+          type: string
+          example: "email"
+        message:
+          type: string
+          example: "must match '^[\\w.-]+@[a-zA-Z\\d.-]+\\.[a-zA-Z]{2,}$'"
+
+    ErrorResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 400
+        message:
+          type: string
+          example: "Validation failed for request data"
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/ValidationError'
